RESOLVED FIXED66271
[EFL] Broken rendering occured when resized in ewk_view_single.
https://bugs.webkit.org/show_bug.cgi?id=66271
Summary [EFL] Broken rendering occured when resized in ewk_view_single.
Ryuan Choi
Reported 2011-08-15 19:27:03 PDT
With single backingstore mode, rendering was broken after scrolled and resized.
Attachments
Patch (1.46 KB, patch)
2011-08-15 19:31 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2011-08-15 19:31:42 PDT
Leandro Pereira
Comment 2 2011-08-16 09:52:48 PDT
Comment on attachment 103994 [details] Patch Informal r+.
Tony Chang
Comment 3 2011-08-18 16:52:37 PDT
Comment on attachment 103994 [details] Patch BTW, WebKit style tries to avoid single letter variables.
WebKit Review Bot
Comment 4 2011-08-18 18:04:25 PDT
Comment on attachment 103994 [details] Patch Clearing flags on attachment: 103994 Committed r93379: <http://trac.webkit.org/changeset/93379>
WebKit Review Bot
Comment 5 2011-08-18 18:04:30 PDT
All reviewed patches have been landed. Closing bug.
Gyuyoung Kim
Comment 6 2011-08-18 18:20:07 PDT
(In reply to comment #3) > (From update of attachment 103994 [details]) > BTW, WebKit style tries to avoid single letter variables. single letter is efl coding style. Frankly, though I don't like this style, port implementation tends to be in the style of the embedding system.
Note You need to log in before you can comment on or make changes to this bug.