[EFL] Broken rendering occured when resized in ewk_view_single. https://bugs.webkit.org/show_bug.cgi?id=66271

Force rendering when ewk_view resized.
It's because Evas_Object doesn't generate any rendering request although
it was changed.

Reviewed by Tony Chang.

* ewk/ewk_view.cpp:
(_ewk_view_smart_calculate):


Canonical link: https://commits.webkit.org/82369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93379 268f45cc-cd09-0410-ab3c-d52691b4dbfc